# FarmifAI

./: .gitattributes  .gitignore  ARCHITECTURE.md  FarmifAI-debug-v1.0-20251225_094201.apk  FarmifAI-debug-v1.0-20251225_101058.apk  FarmifAI-debug-v1.0-20251225_101950.apk  FarmifAI-debug-v1.0-20251226_090906.apk  FarmifAI-debug-v1.0-20251226_093751.apk  FarmifAI-demo-tizon-norteno-20251226_185200.apk  PLAN_DIAGNOSTICO_VISUAL.md  README.md  SEMANTIC_SIMILARITY_REPORT.md  TECHNICAL_DOCUMENTATION.md  apk0503.apk  generate_embeddings.py  generate_kb_embeddings.py  generate_mindspore_compatible_embeddings.py  gradle.properties  recuperationmethods.md  semantic_test_results.json  sistemapruebaRAG.txt  test_semantic_similarity.py
.github/: copilot-instructions.md
apk-artifacts/debug/: latest-debug.json
apk-artifacts/release/: latest-release.json
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agrochat_knowledge_base.json  agrochat_knowledge_base.json.bak  kb_embeddings.npy  kb_embeddings_mapping.json  kb_embeddings_mean.npy  kb_embeddings_pooler.npy  plant_disease_labels.json  plant_disease_model.ms
app/src/main/assets/kb_nueva/extract/: 04_establecimiento_y_administracion_del_cafetal.records.jsonl  06_densidad_de_siembra_y_productividad_de_los_cafetales.records.jsonl  08_produccion_de_cafe_en_sistemas_agroforestales.records.jsonl  11_produccion_de_cafe_en_sistemas_intercalados.records.jsonl  12_las_buenas_practicas_agricolas_en_la_caficultura.records.jsonl
app/src/main/cpp/: MindSporeNetnative.cpp  llama_android_compat.cpp
app/src/main/cpp/mindspore-lite-2.4.10-android-aarch64/: .commit_id
app/src/main/cpp/mindspore-lite-2.4.10-android-aarch64/runtime/include/schema/: ops_generated.h
app/src/main/cpp/mindspore-lite-2.4.10-android-aarch64/tools/benchmark/: benchmark
app/src/main/cpp/mindspore-lite-2.4.10-android-aarch64/tools/benchmark_train/: benchmark_train
app/src/main/java/android/llama/cpp/: LLamaAndroid.kt
app/src/main/java/edu/unicauca/app/agrochat/: MainActivity.kt
app/src/main/java/edu/unicauca/app/agrochat/chatbot/: ChatbotOrchestrator.kt
app/src/main/java/edu/unicauca/app/agrochat/feedback/: FeedbackEventStore.kt
app/src/main/java/edu/unicauca/app/agrochat/llm/: GroqService.kt  LlamaService.kt
app/src/main/java/edu/unicauca/app/agrochat/mindspore/: MindSporeHelper.kt  NativeTokenizerHelper.kt  SemanticSearchHelper.kt
app/src/main/java/edu/unicauca/app/agrochat/models/: LocalModelRegistry.kt  ModelDownloadService.kt
app/src/main/java/edu/unicauca/app/agrochat/routing/: KbFallbackComposer.kt  ResponseRoutingPolicy.kt
app/src/main/java/edu/unicauca/app/agrochat/ui/theme/: Theme.kt
app/src/main/java/edu/unicauca/app/agrochat/vision/: CameraHelper.kt  PlantDiseaseClassifier.kt
app/src/main/java/edu/unicauca/app/agrochat/voice/: VoiceHelper.kt
app/src/main/res/drawable/: ic_farmifai_logo.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/test/java/edu/unicauca/app/agrochat/routing/: KbFallbackComposerTest.kt  ResponseRoutingPolicyTest.kt
docs/: ACTIVIDAD_FEEDBACK_VISITA_CAMPO.md  ANALISIS_LATENCIA_RESPUESTA_6MIN.md  APK_DOWNLOAD.md  BANCO_PREGUNTAS_TEST_KB.md  DESGLOSE_FLUJOS_EXPLICADO.md  ESTRUCTURA_PROYECTO.md  FARMIFAI_TECHNICAL_OVERVIEW.md  FarmifAI_Documentation_ES.docx  FarmifAI_Informe_Avances.docx  FarmifAI_Informe_Avances_ajustado.docx  HUAWEI_CLOUD_PARA_FARMIFAI.md  MAPA_ARCHIVOS.md  PRESENTATION_30S_SCRIPTS_EN_ES.md  PROMPT_MAESTRO_APP_MOVIL.md  README.md  TERMINAL_APP_REPLICA.md  compile_papers.sh  dataset_selection_30s_explanation_en.txt  generate_word_docs.py  global_goals_contribution_30s_explanation_en.txt  howtoreadme.txt  value_of_solution_30s_explanation_en.txt
docs_backup/: FarmifAI_Documentation_EN.docx  FarmifAI_Paper_EN.tex  FarmifAI_Paper_ES.tex  PRESENTATION_30S_SCRIPTS_EN_ES.txt  generate_diagrams.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kb nueva/extract/: 01_fundamentos_sistemas_de_produccion.records.jsonl  (+6 more)
scripts/: build_and_publish_apk.ps1  build_and_publish_apk.sh  build_apk.sh  deploy_waydroid.sh  despliegue.ps1  install_latest_apk_wireless.sh  run_kb_test_cycle.ps1  run_llama_app_replica.py  run_waydroid_reinstall.sh  send_message_button.ps1  start_llama_server.sh  test_llama_pipeline.sh
tools/: README_AZURE_ML.md  README_LLAMA.md  Train_Colombia_Azure.ipynb  Train_Colombia_Colab.ipynb  Train_PlantVillage_Colab.ipynb  azure_ml_train.py  download_plantvillage_model.py  export_trained_model.py  get_pretrained_model.py  plant_disease_labels.json  prepare_plant_disease_model.py  push_llama_model_to_device.sh  train_local_full.py  train_plantvillage.py  train_plantvillage_light.py
(+21 files in other folders)
